[package]
name = "cli-proxy"
version = "0.3.3"
authors = ["James Kominick <james.kominick@gmail.com>"]
license = "MIT"
description = "cli proxy server"
repository = "https://github.com/jaemk/proxy"
readme = "README.md"
keywords = ["cli", "proxy"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
exclude = [
    "static",
    "media",
    "assets",
    "ci",
]

[[bin]]
name = "proxy"
path = "src/main.rs"
doc = false

[badges]
travis-ci = { repository = "jaemk/proxy", branch = "master" }

[dependencies]
# rouille = "1"
# For new `router!` syntax and `log_custom`
rouille = { git = "https://github.com/tomaka/rouille", rev = "b1b88b1748771a334a78e53c9cc7b21d35bdfa53" }

walkdir = "2"
log = "0.4"
env_logger = "0.5"
chrono = "0.4"
clap = "2"
error-chain = "0.11"
self_update = { version = "0.4", optional = true }

[features]
default = []
update = ["self_update"]

